# OriginPalia

./: .gitignore  CMakeBuild.Bat  CMakeLists.txt
OHook/: PaliaOverlay.cpp  dllmain.cpp
OHook/Misc/: ImGuiExt.cpp  ImGuiExt.h
UniversalHookX/hooks/: hooks.cpp
UniversalHookX/hooks/backend/dx11/: hook_directx11.cpp
UniversalHookX/hooks/backend/dx12/: hook_directx12.cpp
UniversalHookX/hooks/input/: hook_dinput8.cpp
UniversalHookX/menu/: menu.cpp  overlay.cpp
